grammar.js
    source_file: ($) =>
      choice(
        // Case 1: Document with a real header.
        //
        // The header MUST be the very first thing in the file
        // (no leading blank lines). After that, just normal blocks.
        prec(
          1,
          seq(
            field("header", $.document_header),
            repeat(choice($._blank_line, $._block_element)),
          ),
        ),

        // Case 2: Headerless document.
        //
        // Arbitrary mix of blank lines and blocks; any "header-looking"
        // lines here are treated as normal content (paragraphs/sections).
        repeat(choice($._blank_line, $._block_element)),
      ),

    _block_element: ($) =>
      choice(
        $.section,
        $.attribute_entry,
        $.description_list,
        $.callout_list,
        $.unordered_list,
        $.ordered_list,
        $.block_macro,
        $.block_admonition,
        $.inline_admonition,
        $.example_block,
        $.listing_block,
        $.fenced_code_block,
        $.block_quote,
        $.asciidoc_blockquote,
        $.literal_block,
        $.sidebar_block,
        $.passthrough_block,
        $.open_block,
        $.conditional_block,
        $.table_block,
        $.thematic_break,
        $.page_break,
        $.paragraph,
      ),

    section: ($) =>
      choice(
        $.section_level_2,
        $.section_level_3,
        $.section_level_4,
        $.section_level_5,
        $.section_level_6,
      ),

    section_level_2: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_2),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_3,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_3: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_3),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_4,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    title: ($) => token.immediate(/[^\r\n]+/),

    section_marker_2: ($) => token(prec(45, seq("==", /[ \t]+/))),
    section_marker_3: ($) => token(prec(40, seq("===", /[ \t]+/))),
    attribute_entry: ($) =>
      seq(
        field("name", $.attribute_name),
        optional(field("value", seq(token.immediate(/[ \t]+/), $.attribute_value))),
        $._line_ending,
      ),

    attribute_value: ($) => /[^\r\n]+/,

    attribute_name: ($) => token(prec(40, /:[A-Za-z_!][A-Za-z0-9_!-]*:/)),

    // DELIMITED BLOCKS
    listing_block: ($) =>
      seq(
        optional(field("title", alias($._block_title, $.block_title))),
        optional(
          choice(
            seq(field("attributes", $.source_block_attributes), $._line_ending),
            field("attributes", alias($._attribute_list_with_line_ending, $.block_attributes)),
          ),
        ),
        field("open", alias(token(prec(55, /-{4,}[ \t]*\r?\n/)), $.listing_open)),
        optional(field("content", $.block_content)),
        field("close", alias(token(prec(55, /-{4,}[ \t]*\r?\n/)), $.listing_close)),
      ),

    asciidoc_blockquote: ($) =>
      seq(
        optional(field("title", alias($._block_title, $.block_title))),
        optional(
          field("attributes", alias($._attribute_list_with_line_ending, $.block_attributes)),
        ),
        field("open", alias(token(prec(45, /_{4,}[ \t]*\r?\n/)), $.asciidoc_blockquote_open)),
        optional(field("content", $.block_content)),
        field("close", alias(token(prec(45, /_{4,}[ \t]*\r?\n/)), $.asciidoc_blockquote_close)),
      ),

    // Literal blocks
    literal_block: ($) =>
      seq(
        optional(field("title", alias($._block_title, $.block_title))),
        optional(
          field("attributes", alias($._attribute_list_with_line_ending, $.block_attributes)),
        ),
        field("open", alias(token(prec(50, /\.{4,}[ \t]*\r?\n/)), $.literal_open)),
        optional(field("content", $.block_content)),
        field("close", alias(token(prec(50, /\.{4,}[ \t]*\r?\n/)), $.literal_close)),
      ),

    // Sidebar blocks
    sidebar_block: ($) =>
      seq(
        optional(field("title", alias($._block_title, $.block_title))),
        optional(
          field("attributes", alias($._attribute_list_with_line_ending, $.block_attributes)),
        ),
        field("open", alias(token(prec(40, /\*{4,}[ \t]*\r?\n/)), $.sidebar_open)),
        optional(field("content", $._sidebar_block_content)),
        field("close", alias(token(prec(40, /\*{4,}[ \t]*\r?\n/)), $.sidebar_close)),
      ),

    // Passthrough blocks
    block_admonition: ($) =>
      prec(
        30,
        seq(
          optional(field("title", alias($._block_title, $.block_title))),
          field("type", $.attribute_admonition_list),
          field(
            "block",
            choice(
              $.example_block,
              $.listing_block,
              $.asciidoc_blockquote,
              $.literal_block,
              $.sidebar_block,
              $.passthrough_block,
              $.open_block,
            ),
          ),
        ),
      ),

    attribute_admonition_list: ($) =>
      prec(
        20, // any positive number > 0; just needs to beat the default
        seq(
          $.plain_left_bracket,
          $.admonition_label,
          repeat(choice($.plain_text, $._whitespace)),
          $.plain_right_bracket,
          $._line_ending,
        ),
      ),

    admonition_label: ($) =>
      choice(
        token("NOTE"),
        token("TIP"),
        token("IMPORTANT"),
        token("WARNING"),
        token("CAUTION"),
      ),

    // CONDITIONAL BLOCKS - with higher precedence to resolve conflicts with description lists
    conditional_block: ($) => prec(10, choice($.ifdef_block, $.ifndef_block, $.ifeval_block)),

    ifdef_block: ($) =>
      seq(
        field("directive", $.ifdef_open),
        $._blank_line,
        field("content", repeat(choice($._block_element, $._blank_line))),
        field("end", $.endif_directive),
        $._blank_line,
      ),

    ifndef_block: ($) =>
      seq(
        field("directive", $.ifndef_open),
        $._blank_line,
        field("content", repeat(choice($._block_element, $._blank_line))),
        field("end", $.endif_directive),
        $._blank_line,
      ),

    ifdef_open: ($) => prec(20, /ifdef::[^\[\]:\r\n]+\[\]/),

    ifndef_open: ($) => prec(20, /ifndef::[^\[\]:\r\n]+\[\]/),

    endif_directive: ($) => /endif::\[\]/,

    // EXPRESSIONS - for ifeval conditions (fixed to eliminate recursion)
    // Use prec.left/right with explicit precedence levels to avoid recursion
    block_title: ($) => alias($._block_title, $.block_title),

    block_content: ($) => repeat1(choice($.content_line, $._blank_line)),

    _sidebar_block_content: ($) => repeat1(choice($._blank_line, $._sidebar_block_element)),

    content_line: ($) => seq($.DELIMITED_BLOCK_CONTENT_LINE, $._line_ending),

    description_list: ($) =>
      prec.right(25, seq($.description_list_item, repeat($.description_list_item))),

    paragraph: ($) => prec.right(1, field("content", $._inline_text)),

    // INLINE FORMATTING
    inline_element: ($) =>
      choice(
        $.monospace,
        $.strong,
        $.emphasis,
        $.superscript,
        $.subscript,
        $.anchor,
        $.bibliography_entry,
        $.internal_xref,
        $.explicit_link,
        $.auto_link,
        $.highlight,
        $.passthrough_triple_plus,
        $.attribute_substitution,
        $.index_term,
        $.hard_break,
      ),

    _inline_text: ($) => prec.right(seq($.inline_seq_nonempty, repeat($.inline_seq_nonempty))),

    inline_seq_nonempty: ($) =>
      prec.right(seq($._inline_core_unit, repeat($._inline_core_unit))),

    _inline_core_unit: ($) =>
      choice(
        $.inline_macro,
        $.inline_element,
        $.escaped_char,
        $.punctuation,
        $.plain_text,
        $._whitespace,
      ),

    plain_text: ($) => prec.left(-50, $._plain_text_segment),
    _plain_text_segment: ($) => /[A-Za-z0-9$&@=]+/,
    _whitespace: ($) => token(/[ \t]+/),

    plain_colon: ($) => token(":"),
    plain_left_bracket: () => token("["),
    plain_right_bracket: () => token("]"),
    strong: ($) =>
      prec.left(
        1,
        choice(
          seq(
            field("open", alias($._strong_double_marker, $.strong_open)),
            field("content", $.strong_content),
            field("close", alias($._strong_double_marker, $.strong_close)),
          ),
          seq(
            field("open", alias($._strong_single_marker, $.strong_open)),
            field("content", $.strong_content),
            field("close", alias($._strong_single_marker, $.strong_close)),
          ),
        ),
      ),

    _strong_double_marker: ($) => token(prec(15, "**")),

    _strong_single_marker: ($) => token(prec(5, "*")),

    strong_content: ($) =>
      repeat1(
        choice(
          $.emphasis,
          $.monospace,
          $.superscript,
          $.subscript,
          $.escaped_char,
          token.immediate(/[^*\\\r\n]+/), // other text
        ),
      ),

    // Emphasis formatting (_italic_ or __italic__)
    _attribute_list_with_line_ending: ($) => seq($._attribute_list, $._line_ending),

    _line_ending: ($) => token(prec(-2, /\r?\n/)),
    _blank_line: ($) => token(prec(-1, /[ \t]*\r?\n/)),
  },
});
