test/corpus/12_conditional_conflicts.txt
================================================================================
Paragraphs with directive-like words
================================================================================

This paragraph contains ifdef:: and ifndef:: words but
they are in the middle of sentences, not at start of lines.

The word endif:: can also appear here.

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)))
  (description_list
    (description_item
      (description_term)
      (description_content
        (inline_seq_nonempty
          (plain_text)))))
  (description_list
    (description_item
      (description_term)
      (description_content
        (inline_seq_nonempty
          (plain_text)
          (plain_text))
        (inline_seq_nonempty
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)))))
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)))
  (description_list
    (description_item
      (description_term)
      (description_content
        (inline_seq_nonempty
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text))))))

================================================================================
Malformed conditionals should be paragraphs
================================================================================

ifdef::attr[extra content after bracket]
ifndef::
ifeval::[incomplete

These look like conditionals but are malformed.

--------------------------------------------------------------------------------

(source_file
  (conditional_block
    (ifdef_block
      directive: (ifdef_open)
      content: (paragraph
        content: (inline_seq_nonempty
          (plain_text)
          (plain_colon
            (PLAIN_COLON)))
        content: (inline_seq_nonempty
          (plain_text)
          (plain_colon
            (PLAIN_COLON)))
        (ERROR
          (attribute_identifier)))
      content: (paragraph
        content: (inline_seq_nonempty
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text))))))

================================================================================
Mixing attributes and conditionals
================================================================================

:attr1: value1

ifdef::attr1[]
Content when attr1 is set
endif::[]

:attr2: value2

ifndef::missing[]
Content when missing is not set
endif::[]

--------------------------------------------------------------------------------

(source_file
  (attribute_entry
    (attribute_name
      (PLAIN_COLON))
    (attribute_identifier)
    (attribute_name
      (PLAIN_COLON))
    (attribute_value))
  (conditional_block
    (ifdef_block
      (ifdef_open)
      (paragraph
        (inline_seq_nonempty
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)))
      (endif_directive)))
  (attribute_entry
    (attribute_name
      (PLAIN_COLON))
    (attribute_identifier)
    (attribute_name
      (PLAIN_COLON))
    (attribute_value))
  (conditional_block
    (ifndef_block
      (ifndef_open)
      (paragraph
        (inline_seq_nonempty
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)))
      (endif_directive))))

================================================================================
Triple colons are not conditionals
================================================================================

something::: this is not a conditional
another:::word paragraph

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_colon
        (PLAIN_COLON))
      (plain_colon
        (PLAIN_COLON))
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text))
    (inline_seq_nonempty
      (plain_text)
      (plain_colon
        (PLAIN_COLON))
      (plain_colon
        (PLAIN_COLON))
      (plain_text)
      (plain_text))))

================================================================================
No targets in ifdef should still work
================================================================================

ifdef::[]
Content without specific target
endif::[]

ifndef::[]
Content for ifndef without target
endif::[]

--------------------------------------------------------------------------------

(source_file
  (conditional_block
    (ifdef_block
      (ifdef_open)
      (paragraph
        (inline_seq_nonempty
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)))
      (endif_directive)))
  (conditional_block
    (ifndef_block
      (ifndef_open)
      (paragraph
        (inline_seq_nonempty
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)
          (plain_text)))
      (endif_directive))))

================================================================================
Conditionals with attributes inside sections
================================================================================

== Main Section

:debug: true

ifdef::debug[]
Debug information here
endif::[]

=== Subsection

ifndef::production[]
Development content
endif::[]

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_2
      marker: (section_marker_2)
      title: (title)
      content: (attribute_entry
        name: (attribute_name
          (PLAIN_COLON))
        name: (attribute_identifier)
        name: (attribute_name
          (PLAIN_COLON))
        value: (attribute_value))
      content: (conditional_block
        (ifdef_block
          directive: (ifdef_open)
          content: (paragraph
            content: (inline_seq_nonempty
              (plain_text)
              (plain_text)
              (plain_text)))
          end: (endif_directive)))
      content: (section_level_3
        marker: (section_marker_3)
        title: (title)
        content: (conditional_block
          (ifndef_block
            directive: (ifndef_open)
            content: (paragraph
              content: (inline_seq_nonempty
                (plain_text)
                (plain_text)))
            end: (endif_directive)))))))
